...
    case 'Invited':
      return Colors.grey.shade200;
    case 'Accepted':
      return NMColors.lightGreen;
    case 'Rejected':
      return Colors.red;
    case 'In Progress':
      return NMColors.inProgress;
    case 'New':
      return NMColors.newJob;
    case 'Waiting Materials':
      return NMColors.waitingMaterials;
    case 'Completed':
      return NMColors.completed;
    case 'Postponed':
...
