...
    }

    setState(() {});

    var index = 0;

    if (widget.label == 'Status') {
      index = 0;
    } else if (widget.label == 'Type') {
      index = 1;
    } else if (widget.label == 'Pricing Type') {
      index = 2;
    } else if (widget.label == 'Priority') {
...
